Added comments and references. Happy with the appearance of the site.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Use external Bootstrap stylesheet-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Use external css stylesheet-->
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Home - Evan Malherbe Resume</title>
 </head>
 
 <body>
+    <!-- Header section with logo and navigation links -->
     <div class="header">
         <div class="headerText"><img src="images/evanLogo-edit.png" alt="Evan Malherbe logo"></div>
         <div class="headerLinks">
@@ -26,8 +24,10 @@
                 <li><a href="#projects">Projects</a></li>
             </ul>
         </div>
+        <!-- Header ends -->
     </div>
 
+    <!-- "Top Row" section for Bio and contact details. -->
     <div class="topRow">
         <div class="bioContact" id="bio">
             <h2>Bio</h2>
@@ -40,7 +40,6 @@
                 fitness or increased muscle mass, but the journey is fun and challenging. I'm motivated by the prospect
                 of a fulfilling career doing something that I enjoy. I'm presently loving the journey of learning Web
                 Development and am optimistic about my future in this space.
-
             </p>
 
             <h3 id="contact"> Contact </h3>
@@ -51,26 +50,25 @@
                 <li>Email: <a href="mailto:evanmalherbe@gmail.com">evanmalherbe@gmail.com</a></li>
                 <li>LinkedIn: <a href="http://www.linkedin.com/in/evan-malherbe"
                         target="_blank">www.linkedin.com/in/evan-malherbe</a></li>
-                <li>GitHub: <a href="https://github.com/evanmalherbe" target="_blank">https://github.com/evanmalherbe</a></li>
+                <li>GitHub: <a href="https://github.com/evanmalherbe"
+                        target="_blank">https://github.com/evanmalherbe</a></li>
             </ul>
-
-            <!-- topText container ends -->
         </div>
 
+        <!-- Profile image of Evan -->
         <div class="profileImg">
-            <img src="images/evanImg.jpg" alt="Evan Malherbe">  
+            <img src="images/evanImg.jpg" alt="Evan Malherbe">
         </div>
-        
-        <!-- To row container ends -->
+
+        <!-- "Top Section" ends -->
     </div>
 
+    <!-- Section for skills and education -->
     <div class="skillsEdu">
         <div class="skills" id="skills">
             <h3>Skills</h3>
-
             <ul>
                 <li>Speak English and Afrikaans fluently</li>
-
                 <li>Teaching - Intermediate/Senior Phase (Grade 4 - 12)</li>
                 <li>IT Skills
                     <ul>
@@ -91,14 +89,20 @@
         <div class="education" id="education">
             <h3>Education</h3>
             <p>
-                I matriculated from Westville Boys' High School in 2001, then completed my Bachelor of Arts in Humanities
-                degree at Stellenbosch University in 2007. I later went on to get my Post Graduate Certificate in Education
-                (PGCE) through UNISA in 2011. I am currently (Nov 2021) completing a 3 month Full Stack Web Development Bootcamp
+                I matriculated from Westville Boys' High School in 2001, then completed my Bachelor of Arts in
+                Humanities
+                degree at Stellenbosch University in 2007. I later went on to get my Post Graduate Certificate in
+                Education
+                (PGCE) through UNISA in 2011. I am currently (Nov 2021) completing a 3 month Full Stack Web Development
+                Bootcamp
                 through <a href="https://www.hyperiondev.com/" target="_blank">HyperionDev</a>.
             </p>
         </div>
+
+        <!-- Skills and Educaton section ends -->
     </div>
 
+    <!-- Work experience section -->
     <div class="workAndImg">
         <div class="workImg">
             <img src="images/workPic.jpg" alt="Man working on laptop">
@@ -107,31 +111,40 @@
         <div class="work" id="work">
             <h3>Work Experience</h3>
             <p>
-                After school I worked at "Market Wizards" doing sales and technical support for 2 years. They were a company
-                that trained people to successfully trade the South African stock market. I moved on to Impro Technologies,
+                After school I worked at "Market Wizards" doing sales and technical support for 2 years. They were a
+                company
+                that trained people to successfully trade the South African stock market. I moved on to Impro
+                Technologies,
                 where I was one of their Business Development Managers. They specialised in Access Control and security
-                systems. After Impro, I decided to study Education and worked at Winston Park Primary School for the year as
+                systems. After Impro, I decided to study Education and worked at Winston Park Primary School for the
+                year as
                 an Intern, while I studied my Post Graduate Certificate in Education through Unisa.
             </p>
             <p>
-                The following year, once I had graduated, I worked at Lyndhurst Primary School as a grade 4 and 5 teacher. I
-                worked at Lyndhurst for 3 years before starting work as a staff trainer and copywriter at iX Online Motoring
-                (they do websites and Social Media for the motor industry). I stayed for 3 years before moving to work as an
+                The following year, once I had graduated, I worked at Lyndhurst Primary School as a grade 4 and 5
+                teacher. I
+                worked at Lyndhurst for 3 years before starting work as a staff trainer and copywriter at iX Online
+                Motoring
+                (they do websites and Social Media for the motor industry). I stayed for 3 years before moving to work
+                as an
                 Intern Estate Agent at Pam Golding Properties Westville. I worked as an agent for 2 years and am now
                 studying web Development through HyperionDev.
             </p>
         </div>
-
+        <!-- Work experience section ends -->
     </div>
 
+    <!-- Projects section -->
     <div class="projects" id="projects">
         <div class="project1">
             <h3>Projects</h3>
             <h4>Music Track Storage Website</h4>
             <p>
-                This little project is one of my first demontrations of working with the Web storage API and JSON to store
+                This little project is one of my first demontrations of working with the Web storage API and JSON to
+                store
                 user input and transfer it from one webpage to another. It asks the user to enter some information about
-                their favourite music tracks and then displays the information on the page. The user can then edit or delete
+                their favourite music tracks and then displays the information on the page. The user can then edit or
+                delete
                 track information as well.
             </p>
             <p>
@@ -145,8 +158,10 @@
         <div class="project2">
             <h4>Bootcamp Capstone Project - Online Store</h4>
             <p>
-                I've most recently worked on a project for my coding bootcamp that involved creating a functioning online
-                store, complete with (pretend) products and a shopping cart. It has been very challenging but so rewarding.
+                I've most recently worked on a project for my coding bootcamp that involved creating a functioning
+                online
+                store, complete with (pretend) products and a shopping cart. It has been very challenging but so
+                rewarding.
                 This website is built using all of the languages that I have been learning to use, including HTML, CSS,
                 Javascript and jQuery.
             </p>
@@ -157,7 +172,10 @@
 
             <img src="images/online-store.png" alt="Screenshot of online store">
         </div>
+        <!-- Projects section ends -->
     </div>
+
+    <!-- Footer section -->
     <div class="footer">© Copyright Evan Malherbe 2021</div>
 
 </body>
